Replace new Boolean() with Boolean.valueOf()